--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,15 +61,8 @@ services:
         condition: service_healthy
     networks:
       - blytz-network
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.blytz-backend.rule=Host(`your-domain.com`)"
-      - "traefik.http.routers.blytz-backend.entrypoints=websecure"
-      - "traefik.http.routers.blytz-backend.tls=true"
-      - "traefik.http.routers.blytz-backend.tls.certresolver=letsencrypt"
-      - "traefik.http.services.blytz-backend.loadbalancer.server.port=8080"
-      - "traefik.http.routers.blytz-backend.middlewares=blytz-api-strip"
-      - "traefik.http.middlewares.blytz-api-strip.stripprefix.prefixes=/api"
+    ports:
+      - "8080:8080"
 
   # React Frontend
   blytz-cloud:
@@ -82,13 +75,8 @@ services:
       VITE_API_URL: http://backend:8080
     depends_on:
       - backend
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.blytz-frontend.rule=Host(`your-domain.com`)"
-      - "traefik.http.routers.blytz-frontend.entrypoints=websecure"
-      - "traefik.http.routers.blytz-frontend.tls=true"
-      - "traefik.http.routers.blytz-frontend.tls.certresolver=letsencrypt"
-      - "traefik.http.services.blytz-frontend.loadbalancer.server.port=80"
+    ports:
+      - "80:80"
 
 networks:
   blytz-network:
