remove backend port mapping to avoid conflict

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,8 +61,6 @@ services:
         condition: service_healthy
     networks:
       - blytz-network
-    ports:
-      - "8080:8080"
 
   # React Frontend
   blytz-cloud:
@@ -75,6 +73,8 @@ services:
       VITE_API_URL: http://backend:8080
     depends_on:
       - backend
+    networks:
+      - blytz-network
     ports:
       - "80:80"
 
