configure for Dokploy isolated deployments - remove manual Traefik labels and dokploy-network

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,5 @@ DB_NAME=blytz
 # JWT Secret (change this in production!)
 JWT_SECRET=your-super-secret-jwt-key-change-me
 
-# API URL (for frontend development)
-VITE_API_URL=http://localhost:8080
-
-# Traefik Domain (update with your actual domain)
-# Update docker-compose.yml labels with your domain
-# DOMAIN=your-domain.com
+# API URL (for frontend - use HTTPS in production)
+VITE_API_URL=https://api.blytz.cloud
