feat: Phase 1 - Security Foundation (v0.1.0)
- Complete auth system with JWT tokens and refresh tokens
- Implement user and refresh token repositories
- Add comprehensive middleware layer:
  * Authentication (JWT verification)
  * Authorization (RBAC with owner/admin/staff roles)
  * CORS (proper origin handling)
  * Rate limiting (Redis-based)
  * Request ID (correlation tracking)
  * Logger (request/response logging)
  * Recovery (panic handling)
- Implement error handling with structured error types
- Add context management for tenant isolation
- Update User model with password hash, role, business_id
- Add new models: Customer, Payment, Subscription, etc.
- Refactor main.go to use new architecture
- Add auth endpoints: register, login, logout, refresh, me
- Add go.mod dependencies: golang-jwt/jwt/v5, bcrypt

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   # Redis Cache
   redis:
     image: redis:7-alpine
-    container_name: blytzbooking-redis
+    container_name: redis
     restart: unless-stopped
     command: redis-server --appendonly yes
     volumes:
@@ -43,7 +43,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: blytzbooking-backend
+    container_name: backend
     restart: unless-stopped
     environment:
       SERVER_PORT: 3001
@@ -73,7 +73,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: blytzbooking-frontend
+    container_name: blytz-cloud
     restart: unless-stopped
     environment:
       VITE_API_URL: https://api.blytz.cloud
