fix: Restore service name blytz-cloud, remove port mappings
Changes:
- Change service name from 'frontend' back to 'blytz-cloud'
  (required by Dokploy deployment)
- Remove port mappings from backend and frontend services
  (Traefik will handle routing automatically)
- Keep postgres:5432 and redis:6379 for local debugging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,6 @@ services:
       dockerfile: Dockerfile
     container_name: blytzbooking-backend
     restart: unless-stopped
-    ports:
-      - "3001:3001"
     environment:
       SERVER_PORT: 3001
       ENV: production
@@ -60,14 +58,12 @@ services:
       - blytz-network
 
   # React Frontend
-  frontend:
+  blytz-cloud:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: blytzbooking-frontend
     restart: unless-stopped
-    ports:
-      - "3000:3000"
     environment:
       VITE_API_URL: http://localhost:3001
     depends_on:
