feat: implement Phase 2 - Architecture and Service Layer
Backend:
- Add service layer architecture (internal/services/)
- Create Business, Booking, Auth, Service, Slot services
- Add custom error types (ErrNotFound, ErrConflict, ErrBadRequest, etc.)
- Implement business logic in services (slot validation, transactions)
- Add DTO layer for API requests/responses (internal/dto/)
- Add validation utilities (internal/validator/)
- Add validation middleware for API endpoints
- Refactor handlers to use service layer instead of direct DB access
- Update auth utilities (JWT generation/validation, password hashing)

Frontend:
- Install and configure react-router-dom
- Implement real routing with BrowserRouter (routes/router.tsx)
- Create AuthContext for global authentication state
- Create ProtectedRoute component for route-based access control
- Update all components to use react-router hooks (useNavigate, useParams)
  - SaaSLanding: useNavigate for business selection
  - PublicBooking: useParams for business slug
  - Login: useNavigate for redirect after auth
  - OperatorDashboard: useAuth for logout
  - Confirmation: useNavigate for navigation
- Replace fake routing with real React Router
- Update App.tsx to use RouterProvider

Documentation:
- Update AGENTS.md with Phase 2 completion status (75%)
- Update project structure documentation
- Update API documentation
- Update metadata.json to 75% completion
- Update .gitignore for Go binaries

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,19 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Go binaries
+backend/bin/
+backend/*.exe
+backend/*.exe~
+backend/*.dll
+backend/*.so
+backend/*.dylib
+
+# Go test files
+backend/*.test
+backend/*.out
+
+# Go workspace files
+backend/go.work
+backend/go.work.sum
