--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,11 +63,11 @@ services:
       - blytzbooking-network
     labels:
       - traefik.enable=true
-      - traefik.http.routers.blytz-backend.rule=Host(`api.blytz.cloud`)
-      - traefik.http.routers.blytz-backend.entrypoints=websecure
-      - traefik.http.routers.blytz-backend.tls=true
-      - traefik.http.routers.blytz-backend.tls.certresolver=letsencrypt
-      - traefik.http.services.blytz-backend.loadbalancer.server.port=3004
+      - traefik.http.routers.blytzbooking-backend.rule=Host(`api.blytz.cloud`)
+      - traefik.http.routers.blytzbooking-backend.entrypoints=websecure
+      - traefik.http.routers.blytzbooking-backend.tls=true
+      - traefik.http.routers.blytzbooking-backend.tls.certresolver=letsencrypt
+      - traefik.http.services.blytzbooking-backend.loadbalancer.server.port=3004
 
   # React Frontend
   blytz-cloud:
@@ -84,11 +84,11 @@ services:
       - blytzbooking-network
     labels:
       - traefik.enable=true
-      - traefik.http.routers.blytz-frontend.rule=Host(`blytz.cloud`)
-      - traefik.http.routers.blytz-frontend.entrypoints=websecure
-      - traefik.http.routers.blytz-frontend.tls=true
-      - traefik.http.routers.blytz-frontend.tls.certresolver=letsencrypt
-      - traefik.http.services.blytz-frontend.loadbalancer.server.port=3003
+      - traefik.http.routers.blytzbooking-frontend.rule=Host(`blytz.cloud`)
+      - traefik.http.routers.blytzbooking-frontend.entrypoints=websecure
+      - traefik.http.routers.blytzbooking-frontend.tls=true
+      - traefik.http.routers.blytzbooking-frontend.tls.certresolver=letsencrypt
+      - traefik.http.services.blytzbooking-frontend.loadbalancer.server.port=3003
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3003"]
       interval: 30s
