--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  # PostgreSQL Database
+   # PostgreSQL Database
   postgres:
     image: postgres:16-alpine
     restart: unless-stopped
@@ -9,26 +9,30 @@ services:
       POSTGRES_DB: ${DB_NAME:-blytz}
     volumes:
       - blytzbooking_persistent_postgres_data:/var/lib/postgresql/data
+    networks:
+      - dokploy-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  # Redis Cache
+   # Redis Cache
   redis:
     image: redis:7-alpine
     restart: unless-stopped
     command: redis-server --appendonly yes
     volumes:
       - blytzbooking_persistent_redis_data:/data
+    networks:
+      - dokploy-network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  # Go Backend API
+   # Go Backend API
   backend:
     build:
       context: ./backend
@@ -54,8 +58,10 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    networks:
+      - dokploy-network
 
-  # React Frontend
+   # React Frontend
   blytz-cloud:
     build:
       context: .
@@ -73,9 +79,15 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    networks:
+      - dokploy-network
 
 volumes:
   blytzbooking_persistent_postgres_data:
     driver: local
   blytzbooking_persistent_redis_data:
     driver: local
+
+networks:
+  dokploy-network:
+    external: true
