fix: CORS config, port mapping, and real API integration
- Fix CORS to allow specific origins with credentials support
- Update docker-compose port mapping for backend (8080:3001)
- Replace mock data with real API calls in OperatorDashboard
- Add loading states and error handling for dashboard

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,14 +28,14 @@ services:
       timeout: 5s
       retries: 5
 
-   # Go Backend API
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    restart: unless-stopped
-    expose:
-      - "3001"
+    # Go Backend API
+   backend:
+     build:
+       context: ./backend
+       dockerfile: Dockerfile
+     restart: unless-stopped
+     ports:
+       - "8080:3001"
     environment:
       SERVER_PORT: 3001
       ENV: production
