fix: use expose instead of ports mapping for backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     restart: unless-stopped
-    ports:
-      - "8080:3001"
+    expose:
+      - "3001"
     environment:
       SERVER_PORT: 3001
       ENV: production
