docs: add email configuration to .env.example
- Add EMAIL_FROM, EMAIL_HOST, EMAIL_PORT
- Add EMAIL_USERNAME, EMAIL_PASSWORD
- Include example SMTP settings

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,15 @@ DB_PASSWORD=your_secure_password_here
 DB_NAME=blytz
 
 # JWT Secret (change this in production!)
-JWT_SECRET=your-super-secret-jwt-key-change-me
+JWT_SECRET=your_super_secret_jwt_key_change_me
+
+# Email Configuration (for password resets and notifications)
+EMAIL_FROM=noreply@blytz.cloud
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USERNAME=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
 
 # API URL (for frontend - use HTTPS in production)
 VITE_API_URL=https://api.blytz.cloud
+
